<resources>
    <string name="app_name">Komax Customer</string>

    <string name="customerLogin">Customer Login</string>
    <string name="userName">User Name</string>
    <string name="forgotPassword">Forgot password?</string>


    <string name="youAreNotUpdatedTitle">Update Available</string>
    <string name="youAreNotUpdatedMessage">A new version of Komax Customer is available. Please update to version\s</string>
    <string name="youAreNotUpdatedMessage1">\ now</string>
    <string name="update1">Update</string>
    <string name="notification">Notification</string>

    <!-- Complain Detail Activity -->
    <string name="HintEngg">Select Engineer</string>
    <string name="ComplainDetail">Complain Detail</string>
    <string name="complainDate">Complain Date</string>
    <string name="complainTime">Complain Time</string>
    <string name="complainNo">Complain No</string>
    <string name="complainTitle">Complain Title</string>
    <string name="Priority">Priority</string>
    <string name="ComplainStatus">Complain Status</string>
    <string name="Machine">Machine</string>
    <string name="EngineerName">Engineer Name</string>
    <string name="customername">Customer Name</string>
    <string name="WorkStatus">Work Status</string>
    <string name="EnggWorkStatus">Eng. Work Status</string>
    <string name="Description">Description</string>
    <string name="RectificationDate">Rectification Date</string>
    <string name="seprater">:</string>
    <string name="Back">Back</string>
    <string name="Home">Home</string>


    <!-- Complain list activity -->
    <string name="Status">Status :</string>
    <string name="modelname">Model Name</string>
    <string name="arrange_call">Arrange Call</string>
    <string name="mobile_no">Mobile No</string>
    <string name="enter_your_mobile_no">Enter Your Mobile No</string>
    <string name="submit">Submit</string>
    <string name="powered_by_cfcs">Powered By CFCS</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="enter_your_old_password">Enter Your Old Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_your_new_password">Enter Your New Password</string>
    <string name="feedback">Feedback</string>
    <string name="complaint_no">Complaint No</string>
    <string name="resolved_by">Resolved By</string>
    <string name="punctuality">Punctuality of service engineer</string>
    <string name="technician_capability">Technician Capability</string>
    <string name="customer_centricity">Behaviour and Communications</string>
    <string name="overall_experience">Overall Experience / satisfaction</string>
    <string name="remark">Remark</string>
    <string name="write_your_remark">Write your Remark</string>
    <string name="complaint_detail">Complaint Detail</string>
    <string name="customer_name">Customer Name</string>
    <string name="problem_title">Problem Title</string>
    <string name="machine">Machine</string>
    <string name="machine_model">Machine Model</string>
    <string name="principal">Principal</string>
    <string name="complaint_type">Complaint Type</string>
    <string name="complaint_time">Complaint Time</string>
    <string name="complaint_occurrence">Complaint Occurrence</string>
    <string name="expected_d_o_c">Expected (D.O.C)</string>
    <string name="priority">Priority</string>
    <string name="escalation_level">Escalation Level</string>
    <string name="service_center">Service Center</string>
    <string name="complaint_status">Complaint Status</string>
    <string name="work_status">Work Status</string>
    <string name="description">Description</string>
    <string name="person_name">Person name</string>
    <string name="e_mail_id">E-mail id</string>
    <string name="other_contact_no">Other Contact No</string>
    <string name="engineer_name">Engineer Name</string>
    <string name="email">Email</string>
    <string name="complaints">Complaints</string>
    <string name="call_us">Call Us</string>
    <string name="raise_complaint">Raise Complaint</string>
    <string name="machines">Machines</string>
    <string name="message_feedback">Message/Feedback</string>
    <string name="subject">Subject</string>
    <string name="enter_your_subject">Enter Your Subject</string>
    <string name="refrence">Refrence</string>
    <string name="enter_your_refrence">Enter Your Refrence</string>
    <string name="message">Message</string>
    <string name="enter_your_message">Enter Your Message</string>
    <string name="image">Image</string>
    <string name="choose_file">Choose File</string>
    <string name="no_file_chosen">No File Chosen</string>
    <string name="customer_forgot_password">Customer Forgot Password</string>
    <string name="user_name">User Name</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="back">Back</string>
    <string name="personal_info">Personal Info</string>
    <string name="name">Name</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="mobile_number">Mobile Name</string>
    <string name="designation">Designation</string>
    <string name="login_user_name">Login User Name</string>
    <string name="password">Password</string>
    <string name="machine_detail">Machine Detail</string>
    <string name="customer">Customer</string>
    <string name="plant">Plant</string>
    <string name="machine_sub_model">Machine Sub Model</string>
    <string name="machine_serial_no">Machine Serial No.</string>
    <string name="s_w_version">S/W Version</string>
    <string name="product_key">Product Key</string>
    <string name="date_of_supply">Date of Supply</string>
    <string name="date_of_installation">Date of Installation</string>
    <string name="machine_status">Machine Status</string>
    <string name="comments">Comments</string>
    <string name="warranty_start_date">Warranty Start Date</string>
    <string name="warranty_end_date">Warranty End Date</string>
    <string name="amc_month">AMC Month</string>
    <string name="amc_start_date">AMC Start Date</string>
    <string name="amc_end_date">AMC End Date</string>
    <string name="profile">Profile</string>
    <string name="problem_description">Problem Description</string>
    <string name="complaint_occurrence_at">Complaint Occurrence At:</string>
    <string name="other_contact_nos">Other Contact Nos</string>
    <string name="clear">Clear</string>
    <string name="filters">Filters</string>
    <string name="plant_name">Plant Name</string>
    <string name="machine_name">Machine Name</string>
    <string name="complaint_date">Complaint Date</string>
    <string name="region">Region</string>
    <string name="search_serial_no">Search(Serial No)</string>
    <string name="serial_no">Serial No</string>
    <string name="amc_warranty_type">AMC/Warranty Type</string>
    <string name="s_no">S.No.</string>
    <string name="engineer">Engineer</string>
    <string name="status">Status</string>
    <string name="level">Level</string>
    <string name="machine_no">Machine No</string>
    <string name="cancel">Cancel</string>
    <string name="no_image_selected">No Image Selected</string>
    <string name="ok">OK</string>
    <string name="principal_name">Principal Name</string>
    <string name="model">Model</string>
    <string name="type">Type</string>
    <string name="w_a_start_date">W/A Start Date</string>
    <string name="w_a_end_date">W/A End Date</string>
    <string name="complaintss">Complaints:-</string>
    <string name="problem_occurred_at">Problem Occurred At</string>
    <string name="over_all_response_time">Over All Response Time</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="service_report">Service Report</string>
    <string name="service_report_detail">Service Report Detail</string>

</resources>
