<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/complaintpopLayout"
android:layout_width="wrap_content"
android:layout_height="match_parent"
android:layout_gravity="center"
android:layout_marginBottom="20dp"
android:layout_marginTop="20dp"
android:orientation="vertical">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#396999"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="7dp"
                android:text="@string/filters"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/background_grey"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_serial_no"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/txt_serial_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_text_box_enable_disable"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/serial_no"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textSize="15sp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/plant_name"
                    android:textSize="15sp"
                    android:textStyle="bold"/>


                <com.example.kriteshspinnersearchlib.SearchableSpinner
                    android:id="@+id/spinner_plant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/spinner_back"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:popupBackground="#fff"
                    android:spinnerMode="dropdown"
                    android:minHeight="30dp"
                    android:textSize="11sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/machine_model"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

                <Spinner
                    android:id="@+id/spinner_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/spinner_back"
                    android:entries="@array/items"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:popupBackground="#fff"
                    android:spinnerMode="dropdown"
                    android:textSize="11sp"
                    android:minHeight="30dp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/amc_warranty_type"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

                <Spinner
                    android:id="@+id/spinner_transaction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/spinner_back"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:popupBackground="#fff"
                    android:spinnerMode="dropdown"
                    android:textSize="11sp"
                    android:minHeight="30dp"/>


            </LinearLayout>


        </ScrollView>


    </LinearLayout>

</RelativeLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_marginBottom="5dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Clear"
            android:textColor="@color/blue"
            android:textSize="15sp"
            android:layout_weight="1"
            android:id="@+id/btn_search_clear"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Find"
            android:textColor="@color/blue"
            android:textSize="15sp"
            android:layout_weight="1"
            android:id="@+id/btn_search_find"/>

    </LinearLayout>


</RelativeLayout>

</RelativeLayout>

