<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/maincontainer"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#003399"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#396999"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="7dp"
                android:text="@string/profile"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
    <!-- Heading End -->


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.CardView
                    android:id="@+id/traning_main_lay2"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="8dp"
                    android:clickable="true"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:id="@+id/card_view_machine2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/tv_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/txt_profile_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/edit_text_box_enable_disable"
                            android:drawablePadding="10dp"
                            android:ems="10"
                            android:hint="@string/name"
                            android:inputType="text"
                            android:padding="10dp"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/designation"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/txt_profile_designation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/edit_text_box_enable_disable"
                            android:drawablePadding="10dp"
                            android:ems="10"
                            android:hint="@string/designation"
                            android:inputType="text"
                            android:padding="10dp"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/tv_login_user_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/login_user_name"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/txt_profile_user_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/edit_text_box_enable_disable"
                            android:drawablePadding="10dp"
                            android:ems="10"
                            android:hint="@string/login_user_name"
                            android:inputType="text"
                            android:padding="10dp"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/email"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/txt_profile_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/edit_text_box_enable_disable"
                            android:drawablePadding="10dp"
                            android:ems="10"
                            android:hint="@string/email"
                            android:inputType="text"
                            android:padding="10dp"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/tv_country_code"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="Country Code + Mobile No"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/txt_country_code"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:background="@drawable/edit_text_box_enable_disable"
                                android:drawablePadding="10dp"
                                android:ems="10"
                                android:hint="Code"
                                android:inputType="number"
                                android:padding="10dp"
                                android:textSize="15sp"
                                android:layout_weight="8"/>

                            <EditText
                                android:id="@+id/txt_profile_mobile"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:background="@drawable/edit_text_box_enable_disable"
                                android:drawablePadding="10dp"
                                android:ems="10"
                                android:hint="@string/mobile_no"
                                android:inputType="number"
                                android:padding="10dp"
                                android:textSize="15sp"
                                android:layout_marginLeft="10dp"
                                android:layout_weight="2"/>

                        </LinearLayout>



                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/other_contact_no"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/txt_other_contacts"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/edit_text_box_enable_disable"
                            android:drawablePadding="10dp"
                            android:ems="10"
                            android:hint="@string/other_contact_no"
                            android:inputType="text"
                            android:padding="10dp"
                            android:textSize="15sp" />


                        <Button
                            android:id="@+id/btn_update"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="25dp"
                            android:background="@drawable/mybutton"
                            android:text="@string/submit"
                            android:textColor="@color/white" />


                    </LinearLayout>


                </android.support.v7.widget.CardView>


            </LinearLayout>


        </ScrollView>

        <LinearLayout
            android:id="@+id/btnHomecomplainlist1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:background="#396999"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Powered By CFCS"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>